--- a/lernejo-tester/pom.xml
+++ b/lernejo-tester/pom.xml
@@ -23,4 +23,29 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>fr.lernejo.tester.TestRunner</mainClass>
+                    <classpathScope>test</classpathScope>
+                    <arguments>
+                        <argument>fr.lernejo</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
